--- a/club_app_agent/pubspec.yaml
+++ b/club_app_agent/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   firebase_core: ^4.2.0
   cloud_firestore: ^6.0.3
   geolocator: ^14.0.2
+  camera: ^0.11.3
+  image: ^4.5.4
+  google_mlkit_face_detection: ^0.13.1
+  tensorflow_face_verification: ^0.1.2
+  tflite_flutter: ^0.11.0
 
 dev_dependencies:
   flutter_test:
