--- a/club_app_agent/pubspec.yaml
+++ b/club_app_agent/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_mlkit_face_detection: ^0.13.1
   tensorflow_face_verification: ^0.1.2
   tflite_flutter: ^0.11.0
+  google_mlkit_commons: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/mobilefacenet.tflite
+    - assets/placeholder.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
